--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "npm run lint && tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .tsx"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
@@ -18,7 +19,15 @@
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.5.0",
+		"eslint-plugin-unicorn": "^41.0.1",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.29.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
