--- a/.eslintrc
+++ b/.eslintrc
@@ -22,12 +22,9 @@
     "plugin:react-hooks/recommended",
     "prettier"
   ],
+  "ignorePatterns": ["**/dist/*', '*.md"],
   "rules": {
-    "quotes": [
-      2,
-      "single",
-      { "avoidEscape": true, "allowTemplateLiterals": true }
-    ],
+    "quotes": [2, "single", { "avoidEscape": true }],
     "semi": "error",
     "comma-dangle": "off",
     "no-multiple-empty-lines": "error",
