--- a/package.json
+++ b/package.json
@@ -27,8 +27,18 @@
 		"eslint-plugin-react-hooks": "^4.5.0",
 		"eslint-plugin-unicorn": "^41.0.1",
     "@vitejs/plugin-react": "^2.2.0",
+    "prettier": "^2.5.1",
     "eslint": "^8.29.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
-  }
+  },
+  "prettier": {
+		"printWidth": 120,
+		"singleQuote": true,
+		"jsxSingleQuote": true,
+		"trailingComma": "none",
+		"bracketSpacing": false,
+		"useTabs": true,
+		"tabWidth": 4
+	}
 }
