--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run lint && tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port=8888",
     "lint": "eslint . --ext .tsx,.ts"
   },
   "dependencies": {
